add_library( opgen-full_stokes

   P2ElementwiseFullStokesAnnulusMap_0_0.cpp
   P2ElementwiseFullStokesAnnulusMap_0_0.hpp
   P2ElementwiseFullStokesAnnulusMap_0_1.cpp
   P2ElementwiseFullStokesAnnulusMap_0_1.hpp
   P2ElementwiseFullStokesAnnulusMap_1_0.cpp
   P2ElementwiseFullStokesAnnulusMap_1_0.hpp
   P2ElementwiseFullStokesAnnulusMap_1_1.cpp
   P2ElementwiseFullStokesAnnulusMap_1_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_0.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_0.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_1.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_2.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_0_2.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_0.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_0.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_1.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_2.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_1_2.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_0.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_0.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_1.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_1.hpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_2.cpp
   P2ElementwiseFullStokesIcosahedralShellMap_2_2.hpp
   P2ElementwiseFullStokes_0_0.cpp
   P2ElementwiseFullStokes_0_0.hpp
   P2ElementwiseFullStokes_0_1.cpp
   P2ElementwiseFullStokes_0_1.hpp
   P2ElementwiseFullStokes_0_2.cpp
   P2ElementwiseFullStokes_0_2.hpp
   P2ElementwiseFullStokes_1_0.cpp
   P2ElementwiseFullStokes_1_0.hpp
   P2ElementwiseFullStokes_1_1.cpp
   P2ElementwiseFullStokes_1_1.hpp
   P2ElementwiseFullStokes_1_2.cpp
   P2ElementwiseFullStokes_1_2.hpp
   P2ElementwiseFullStokes_2_0.cpp
   P2ElementwiseFullStokes_2_0.hpp
   P2ElementwiseFullStokes_2_1.cpp
   P2ElementwiseFullStokes_2_1.hpp
   P2ElementwiseFullStokes_2_2.cpp
   P2ElementwiseFullStokes_2_2.hpp
   P2VectorElementwiseFullStokes.cpp
   P2VectorElementwiseFullStokes.hpp
   P2VectorElementwiseFullStokesAnnulusMap.cpp
   P2VectorElementwiseFullStokesAnnulusMap.hpp
   P2VectorElementwiseFullStokesIcosahedralShellMap.cpp
   P2VectorElementwiseFullStokesIcosahedralShellMap.hpp
)

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-full_stokes PRIVATE

      avx/P2ElementwiseFullStokesAnnulusMap_0_0_apply_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_1_apply_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_0_apply_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_apply_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_apply_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_apply_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_1_apply_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_1_apply_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_2_apply_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_0_apply_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_0_apply_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_apply_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_apply_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_2_apply_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_0_apply_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_1_apply_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_apply_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_apply_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_apply_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_apply_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_apply_P2VectorElementwiseFullStokes_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokes_macro_3D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_toMatrix_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_1_toMatrix_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_0_toMatrix_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_toMatrix_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_1_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_2_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_0_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_2_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_0_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_1_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrix_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrix_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrix_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrix_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_2_toMatrix_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrix_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrix_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrix_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrix_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_2_toMatrix_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_0_toMatrix_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_1_toMatrix_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_toMatrix_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_toMatrix_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_toMatrix_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrix_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrix_P2VectorElementwiseFullStokes_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseFullStokesAnnulusMap_0_0_apply_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_0_1_apply_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_0_apply_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_apply_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_0_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_1_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokesIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_apply_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_apply_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_1_apply_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_0_1_apply_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_0_2_apply_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_0_apply_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_0_apply_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_apply_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_apply_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      avx/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_1_2_apply_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_0_apply_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_1_apply_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_apply_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2ElementwiseFullStokes_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_apply_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_apply_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokesIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_apply_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_apply_P2VectorElementwiseFullStokes_macro_3D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokes_macro_2D.cpp
      avx/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokes_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-full_stokes PRIVATE

      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_apply_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_0_toMatrix_P2ElementwiseFullStokesAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_1_apply_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_0_1_toMatrix_P2ElementwiseFullStokesAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_0_apply_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_0_toMatrix_P2ElementwiseFullStokesAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_apply_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesAnnulusMap_1_1_toMatrix_P2ElementwiseFullStokesAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_0_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_1_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_0_2_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_0_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_1_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_1_2_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_0_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_0_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_1_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_1_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_apply_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokesIcosahedralShellMap_2_2_toMatrix_P2ElementwiseFullStokesIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_apply_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_apply_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrix_P2ElementwiseFullStokes_0_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_0_toMatrix_P2ElementwiseFullStokes_0_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_1_apply_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_1_apply_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrix_P2ElementwiseFullStokes_0_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_0_1_toMatrix_P2ElementwiseFullStokes_0_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_2_apply_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_0_2_toMatrix_P2ElementwiseFullStokes_0_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_0_apply_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_0_apply_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrix_P2ElementwiseFullStokes_1_0_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_0_toMatrix_P2ElementwiseFullStokes_1_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_apply_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_apply_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrix_P2ElementwiseFullStokes_1_1_macro_2D.cpp
      noarch/P2ElementwiseFullStokes_1_1_toMatrix_P2ElementwiseFullStokes_1_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_2_apply_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_1_2_toMatrix_P2ElementwiseFullStokes_1_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_0_apply_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_0_toMatrix_P2ElementwiseFullStokes_2_0_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_1_apply_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_1_toMatrix_P2ElementwiseFullStokes_2_1_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_apply_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2ElementwiseFullStokes_2_2_toMatrix_P2ElementwiseFullStokes_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_apply_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesAnnulusMap_toMatrix_P2VectorElementwiseFullStokesAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_apply_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokesIcosahedralShellMap_toMatrix_P2VectorElementwiseFullStokesIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_apply_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_apply_P2VectorElementwiseFullStokes_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_computeInverseDiagonalOperatorValues_P2VectorElementwiseFullStokes_macro_3D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrix_P2VectorElementwiseFullStokes_macro_2D.cpp
      noarch/P2VectorElementwiseFullStokes_toMatrix_P2VectorElementwiseFullStokes_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-full_stokes PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-full_stokes PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-full_stokes PUBLIC cxx_std_17)
endif ()
